--- a/config/crd/bases/secret.h3poteto.dev_kmssecrets.yaml
+++ b/config/crd/bases/secret.h3poteto.dev_kmssecrets.yaml
@@ -47,6 +47,7 @@ spec:
                 properties:
                   metadata:
                     type: object
+                    x-kubernetes-preserve-unknown-fields: true
                 type: object
             required:
             - encryptedData
